--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,8 +26,8 @@
 
 
 [[constraint]]
-  name = "github.com/kataras/iris"
-  version = "10.6.3"
+  name = "github.com/labstack/echo"
+  version = "3.3.5"
 
 [prune]
   go-tests = true
